Reworked HTML containers with grid of divs instead of buttons. Added overlay for hover effect of future selection. Need to work on centering and resizing content. Make CSS reactable.

--- a/index.html
+++ b/index.html
@@ -6,22 +6,54 @@
     </head>
     <body>
         <h1>TIC TAC TOE</h1>
-        <div class="game">
-            <div class="row-one">
-                <button id="one" type="button">BLANK</button>
-                <button id="two" type="button">BLANK</button>
-                <button id="three" type="button">BLANK</button>
+        <hr />
+        <div class="game-grid">
+            <div class="game-grid-item">
+                <div class="overlay">
+                    <div class="overlay-x">X</div>
+                </div>
             </div>
-            <div class="row-two">
-                <button id="four" type="button">BLANK</button>
-                <button id="five" type="button">BLANK</button>
-                <button id="six" type="button">BLANK</button>
+            <div class="game-grid-item">
+                <div class="overlay">
+                    <div class="overlay-x">X</div>
+                </div>
             </div>
-            <div class="row-three">
-                <button id="seven" type="button">BLANK</button>
-                <button id="eight" type="button">BLANK</button>
-                <button id="nine" type="button">BLANK</button>
+            <div class="game-grid-item">
+                <div class="overlay">
+                    <div class="overlay-x">X</div>
+                </div>
             </div>
+            <div class="game-grid-item">
+                <div class="overlay">
+                    <div class="overlay-x">X</div>
+                </div>
+            </div>
+            <div class="game-grid-item">
+                <div class="overlay">
+                    <div class="overlay-x">X</div>
+                </div>
+            </div>
+            <div class="game-grid-item">
+                <div class="overlay">
+                    <div class="overlay-x">X</div>
+                </div>
+            </div>
+            <div class="game-grid-item">
+                <div class="overlay">
+                    <div class="overlay-x">X</div>
+                </div>
+            </div>
+            <div class="game-grid-item">
+                <div class="overlay">
+                    <div class="overlay-x">X</div>
+                </div>
+            </div>
+            <div class="game-grid-item">
+                <div class="overlay">
+                    <div class="overlay-x">X</div>
+                </div>
+            </div>
+            
         </div>
     </body>
 </html>
