--- a/index.html
+++ b/index.html
@@ -3,52 +3,53 @@
         <style type="text/css">
             @import url('style.css');
         </style>
+        <script src="script.js"></script>
     </head>
     <body>
         <h1>TIC TAC TOE</h1>
         <hr />
         <div class="game-grid">
-            <div class="game-grid-item">
+            <div class="game-grid-item" id="1" onClick="selection(1,0)">
                 <div class="overlay">
                     <div class="overlay-x">X</div>
                 </div>
             </div>
-            <div class="game-grid-item">
+            <div class="game-grid-item" id="2" onClick="selection(2,0)">
                 <div class="overlay">
                     <div class="overlay-x">X</div>
                 </div>
             </div>
-            <div class="game-grid-item">
+            <div class="game-grid-item" id="3" onClick="selection(3,0)">
                 <div class="overlay">
                     <div class="overlay-x">X</div>
                 </div>
             </div>
-            <div class="game-grid-item">
+            <div class="game-grid-item" id="4" onClick="selection(4,0)">
                 <div class="overlay">
                     <div class="overlay-x">X</div>
                 </div>
             </div>
-            <div class="game-grid-item">
+            <div class="game-grid-item" id="5" onClick="selection(5,0)">
                 <div class="overlay">
                     <div class="overlay-x">X</div>
                 </div>
             </div>
-            <div class="game-grid-item">
+            <div class="game-grid-item" id="6" onClick="selection(6,0)">
                 <div class="overlay">
                     <div class="overlay-x">X</div>
                 </div>
             </div>
-            <div class="game-grid-item">
+            <div class="game-grid-item" id="7" onClick="selection(7,0)">
                 <div class="overlay">
                     <div class="overlay-x">X</div>
                 </div>
             </div>
-            <div class="game-grid-item">
+            <div class="game-grid-item" id="8" onClick="selection(8,0)">
                 <div class="overlay">
                     <div class="overlay-x">X</div>
                 </div>
             </div>
-            <div class="game-grid-item">
+            <div class="game-grid-item" id="9" onClick="selection(9,0)">
                 <div class="overlay">
                     <div class="overlay-x">X</div>
                 </div>
