Added Player class to script.js to handle selections of users and ai. Added handling of clicks in javascript and style.
Player class handles Player and AI selections/clicks. If clicked, changes style of element by ID to visually show that grid item is selected by that user (ownership).

Game class handles player creation and ownership, handles backend data of grid. Game object checks if Player clicked. If clicked, sets grid item to isMarked and ownership by Player.

Changed clicked function to to initiated clicked methods of Game and Player to set ownership and marking of grid item.

Added button to test that grid markings are showing correctly in back office. testGrid runs through Game.grid multidimensional array to check which items are marked or not by printing alert that shows grid ID and isMarked (0,1) in multidimensional array view.

PLANS: Expecting to add game functions to complete game when grid is full of selections. Player/Game objects will handle markings of player based on ownership (X or O). Future plans to functinality and implementation of bot with randomization selections of available slots. Future-Future plans to add smart gameplay by bot AI as well as 2 player functionality and selection of symbol by players.

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <div class="overlay-x">X</div>
                 </div>
             </div>
-            
         </div>
+        <button onClick="testGrid()">Test Grid</button>
     </body>
 </html>
