TTT-2, added functionality to the game with new reset button and wins. > > For TTT-2, not complete as of yet. Do not merge. > Added functions for Game class to make checks against the game board. Checks if user wins for Columns, Rows, Diagonals, and alerts thems. > > Added Reset button and function to Game board in case resetting board was needed. Resetting board reloads page. > > NEEDS > Reformat end-game checks for AI inputs and wins/user losses as well as reformatting grid multi-dimensional array for better checks against user/ai inputs. Eg. instead of isMarked and Owner keys, use values 1 or 2 to differentiate user/ai input as well as t/f marking.

--- a/index.html
+++ b/index.html
@@ -56,5 +56,6 @@
             </div>
         </div>
         <button onClick="testGrid()">Test Grid</button>
+        <button onClick="game.reset()">Reset</button>
     </body>
 </html>
